# RoboticsStudio2024ROSworkspace

./: cartographer_map.pgm  cartographer_map.yaml  monday_map.pgm  monday_map.yaml  plot_data.py  readbaggo.py  sprint2_map.pgm  sprint2_map.yaml  sprint2_mapv1.pgm  sprint2_mapv1.yaml  sprint3_cylinder_map.pgm  sprint3_v1_carto_map.pgm  sprint3_v1_carto_map.yaml  wednesday_map.pgm  wednesday_map.yaml  world_map.pgm  world_map.yaml
install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node
install/labs/lib/labs/: lab1  lab2  sprint1
install/labs/share/labs/: local_setup.sh  package.bash  package.sh  package.xml
install/my_opencv_demo/lib/my_opencv_demo/: map_laser_matching_node  minimal_opencv_ros2_node  scan_matching_localizer  scan_to_image_node
install/my_opencv_demo/share/ament_index/resource_index/package_run_dependencies/: my_opencv_demo
install/my_opencv_demo/share/my_opencv_demo/: local_setup.sh  package.sh
install/my_worlds_pkg/share/ament_index/resource_index/package_run_dependencies/: my_worlds_pkg
install/my_worlds_pkg/share/my_worlds_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_worlds_pkg/share/my_worlds_pkg/launch/: maze_world.launch.py
install/my_worlds_pkg/share/my_worlds_pkg/worlds/: maze_world.world
install/robot_localization/lib/robot_localization/: dead_reckoning  ekf_node  filter_base-test  navsat_transform_node  robot_localization_listener_node  test_ekf  test_filter_base_diagnostics_timestamps  test_navsat_conversions  test_robot_localization_estimator  test_ros_robot_localization_listener  test_ros_robot_localization_listener_publisher  test_ukf  test_ukf_node_interfaces  ukf_node
install/robot_localization/share/robot_localization/params/: ekf.yaml
install/rtabmap/lib/rtabmap-0.21/: RTABMap_guiTargets-release.cmake
install/rtabmap_conversions/share/ament_index/resource_index/parent_prefix_path/: rtabmap_conversions
install/rtabmap_msgs/share/ament_index/resource_index/parent_prefix_path/: rtabmap_msgs
install/rtabmap_odom/lib/rtabmap_odom/: icp_odometry  rgbd_odometry  stereo_odometry
install/rtabmap_python/share/rtabmap_python/: package.sh
install/rtabmap_ros/share/ament_index/resource_index/parent_prefix_path/: rtabmap_ros
install/rtabmap_slam/lib/rtabmap_slam/: rtabmap
install/rtabmap_sync/lib/rtabmap_sync/: rgb_sync  rgbd_sync  rgbdx_sync  stereo_sync
install/rtabmap_util/lib/rtabmap_util/: disparity_to_depth  imu_to_tf  lidar_deskewing  map_assembler  obstacles_detection  point_cloud_aggregator  point_cloud_assembler  point_cloud_xyz  point_cloud_xyzrgb  pointcloud_to_depthimage  rgbd_relay  rgbd_split
install/rtabmap_viz/lib/rtabmap_viz/: rtabmap_viz
install/search_rescue_package/share/search_rescue_package/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/search_rescue_package/share/search_rescue_package/cmake/: search_rescue_packageConfig.cmake
install/search_rescue_package/share/search_rescue_package/launch/: search_rescue.launch.py
install/search_rescue_package/share/search_rescue_package/worlds/: search_rescue.world
install/sprint3/lib/sprint3/: cylinder_detection_node  map_overlay_node
install/sprint3/share/sprint3/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtlebot3_description/share/turtlebot3_description/rviz/: model.rviz
install/turtlebot3_example/share/turtlebot3_example/: package.sh
install/turtlebot3_fake_node/lib/turtlebot3_fake_node/: turtlebot3_fake_node
install/turtlebot3_gazebo/lib/turtlebot3_gazebo/: turtlebot3_drive
install/turtlebot3_gazebo/share/turtlebot3_gazebo/launch/: maze_world.launch.py  sprint1world.launch.py  sprint2world.launch.py  sprint3world.launch.py
install/turtlebot3_gazebo/share/turtlebot3_gazebo/worlds/: maze_world.world  search_rescue.world  sprint1world.world  sprint2world.world
install/turtlebot3_navigation2/share/turtlebot3_navigation2/param/: waffle_pi.yaml
install/turtlebot3_node/lib/turtlebot3_node/: turtlebot3_ros
install/turtlebot3_teleop/share/turtlebot3_teleop/: package.sh
install/turtlesim/lib/turtlesim/: draw_square  mimic  turtle_teleop_key  turtlesim_node
log/: latest_build
src/: my_map.pgm  my_map.yaml
src/labs/: CMakeLists.txt
src/labs/install/: local_setup.sh  setup.sh
src/labs/model/search/: search.config  search.sdf
src/labs/model/simpleworld/: model.config  model.sdf
src/labs/src/: lab1.cpp  lab2.cpp  sprint1.cpp
src/labs/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/my_opencv_demo/: CMakeLists.txt  package.xml
src/my_opencv_demo/install/: local_setup.sh  setup.sh
src/my_opencv_demo/install/my_opencv_demo/lib/my_opencv_demo/: image_processor  minimal_opencv_ros2_node  scan_processor  scan_to_image_node
src/my_opencv_demo/install/my_opencv_demo/share/my_opencv_demo/: local_setup.sh  package.sh
src/my_opencv_demo/src/: image_processor.cpp  map_laser_matching_node.cpp  minimal_opencv_ros2_node.cpp  scan_matching_localizer.cpp  scan_processor.cpp  simple_localizer_node.cpp
src/my_opencv_demo/src/install/: local_setup.sh  setup.sh
src/robot_localization-f6b28e0c5bcf98d161cb65b9d28d00ced77fe3ab/: CMakeLists.txt
src/sprint3/: CMakeLists.txt  Doxyfile  package.xml
src/sprint3/docs/html/: annotated.html  classCylinderDetectionNode-members.html  classCylinderDetectionNode.html  classCylinderDetectionNode__coll__graph.map  classCylinderDetectionNode__coll__graph.md5  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html
src/sprint3/docs/html/search/: all_0.js  classes_0.js  functions_0.js
src/sprint3/docs/latex/: annotated.tex  classCylinderDetectionNode.tex  classCylinderDetectionNode__coll__graph.md5  hierarchy.tex  refman.tex
src/sprint3/models/cylinder/: model.sdf
src/sprint3/src/: cylinder_detection_node.cpp  map_overlay_node.cpp
(+15 files in other folders)
