<?xml version="1.0"?>
<package format="3">
  <name>sprint3</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="student@todo.todo">student</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

